A bit of tuple support